--- a/Projeto2/appsettings.json
+++ b/Projeto2/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MySQLConnection": "server=localhost;database=dbSistema;user=root;password=Jungk00k"
+  }
+
 }
