Criando a String de conexao e arrumando codigos

--- a/Projeto2/appsettings.json
+++ b/Projeto2/appsettings.json
@@ -1,13 +1,14 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;database=dbsistema;user=root;password=Jungk00k"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "MySQLConnection": "server=localhost;database=dbSistema;user=root;password=Jungk00k"
-  }
+  "AllowedHosts": "*"
 
 }
